--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
     <option value="SARTHANA JAKATNAKA BRTS">
     <option value="JAHANGIRPURA BRTS">
     <option value="ICHCHHAPOR BRTS">
+    <option value="ICHCHHAPOR BRTS">
+    <option value="ICHCHHAPOR BRTS">
+    <option value="Railway Station Terminal">
+    <option value="Kharwarnagar Brts">
+    <option value="Shyam Mandir Brts">
+    <option value="Someshwar Junction Brts">
+    <option value="Anuvrat Dwar Junction (East) Brts">
+    <option value="Anuvrat Dwar Junction (West) Brts">
+    <option value="Chikuwadi Brts">
+
+
+    </option>
+    </option>
   </datalist>
 
   <script src="script.js"></script>
