All Updates Done

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
     <option value="ICHCHHAPOR BRTS">
     <option value="ICHCHHAPOR BRTS">
     <option value="ICHCHHAPOR BRTS">
-    <option value="Railway Station Terminal">
-    <option value="Kharwarnagar Brts">
-    <option value="Shyam Mandir Brts">
-    <option value="Someshwar Junction Brts">
-    <option value="Anuvrat Dwar Junction (East) Brts">
-    <option value="Anuvrat Dwar Junction (West) Brts">
-    <option value="Chikuwadi Brts">
+    <option value="RAILWAY STATION TERMINAL">
+    <option value="KHARWARNAGAR BRTS">
+    <option value="SHYAM MANDIR BRTS">
+    <option value="SOMESHWAR JUNCTION BRTS">
+    <option value="ANUVRAT DWAR JUNCTION (EAST) BRTS">
+    <option value="ANUVRAT DWAR JUNCTION (WEST) BRTS">
+    <option value="CHIKUWADI BRTS">
 
 
     </option>
